# apps-in-rust

./: .gitignore
beginner/bin2dec/: index.md
beginner/bin2dec/src/: main.rs
beginner/jokes-cli/: Cargo.toml
beginner/jokes-cli/src/: main.rs
beginner/scrap_quotes/: Cargo.toml
beginner/scrap_quotes/src/: main.rs
